remove usless code

--- a/demo-front/src/app/app.component.html
+++ b/demo-front/src/app/app.component.html
@@ -3,8 +3,8 @@
     <div class="header-center">
       <div class="logo-icon">&lt;/&gt;</div>
       <div class="header-titles">
-        <h1>Motor Hexagonal de Migración</h1>
-        <p>Traductor de código Legacy a Modern</p>
+        <h1>Motor Migración</h1>
+        <p>Traductor de código Legacy</p>
       </div>
     </div>
   </header>
